ieee/bnfParser.py
# Generated from bnfParser.g4 by ANTLR 4.10
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class bnfParser ( Parser ):

    grammarFileName = "bnfParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'::='", "'|'", "'['", "']'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "IDENTIFIER", "CAPITALIZED_WORD", "SECTION_REFERENCE", 
                      "DOUBLE_COLON_EQUAL", "VERTICAL_BAR", "LEFT_BRACKET", 
                      "RIGHT_BRACKET", "LEFT_BRACE", "RIGHT_BRACE", "APOSTROPHE", 
                      "OTHER", "STRING_TEXT", "STRING_APOSTROPHE", "STRING_OTHER" ]

    RULE_formal_syntax = 0
    RULE_rule_definition = 1
    RULE_rule_alternatives = 2
    RULE_alternative = 3
    RULE_item = 4
    RULE_optional_item = 5
    RULE_repeated_item = 6
    RULE_rule_identifier = 7
    RULE_rule_reference = 8
    RULE_keyword_or_punctuation = 9

    ruleNames =  [ "formal_syntax", "rule_definition", "rule_alternatives", 
                   "alternative", "item", "optional_item", "repeated_item", 
                   "rule_identifier", "rule_reference", "keyword_or_punctuation" ]

    EOF = Token.EOF
    IDENTIFIER=1
    CAPITALIZED_WORD=2
    SECTION_REFERENCE=3
    DOUBLE_COLON_EQUAL=4
    VERTICAL_BAR=5
    LEFT_BRACKET=6
    RIGHT_BRACKET=7
    LEFT_BRACE=8
    RIGHT_BRACE=9
    APOSTROPHE=10
    OTHER=11
    STRING_TEXT=12
    STRING_APOSTROPHE=13
    STRING_OTHER=14

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Formal_syntaxContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(bnfParser.EOF, 0)

        def rule_definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(bnfParser.Rule_definitionContext)
            else:
                return self.getTypedRuleContext(bnfParser.Rule_definitionContext,i)


        def DOUBLE_COLON_EQUAL(self, i:int=None):
            if i is None:
                return self.getTokens(bnfParser.DOUBLE_COLON_EQUAL)
            else:
                return self.getToken(bnfParser.DOUBLE_COLON_EQUAL, i)

        def getRuleIndex(self):
            return bnfParser.RULE_formal_syntax

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormal_syntax" ):
                return visitor.visitFormal_syntax(self)
            else:
                return visitor.visitChildren(self)




    def formal_syntax(self):

        localctx = bnfParser.Formal_syntaxContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_formal_syntax)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 22
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                    if la_ == 1:
                        self.state = 20
                        self.rule_definition()
                        pass

                    elif la_ == 2:
                        self.state = 21
                        _la = self._input.LA(1)
                        if _la <= 0 or _la==bnfParser.DOUBLE_COLON_EQUAL:
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        pass

             
                self.state = 26
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 27
            self.match(bnfParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Rule_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rule_identifier(self):
            return self.getTypedRuleContext(bnfParser.Rule_identifierContext,0)


        def DOUBLE_COLON_EQUAL(self):
            return self.getToken(bnfParser.DOUBLE_COLON_EQUAL, 0)

        def rule_alternatives(self):
            return self.getTypedRuleContext(bnfParser.Rule_alternativesContext,0)


        def getRuleIndex(self):
            return bnfParser.RULE_rule_definition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRule_definition" ):
                return visitor.visitRule_definition(self)
            else:
                return visitor.visitChildren(self)




    def rule_definition(self):

        localctx = bnfParser.Rule_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_rule_definition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self.rule_identifier()
            self.state = 30
            self.match(bnfParser.DOUBLE_COLON_EQUAL)
            self.state = 31
            self.rule_alternatives()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Rule_alternativesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def alternative(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(bnfParser.AlternativeContext)
            else:
                return self.getTypedRuleContext(bnfParser.AlternativeContext,i)


        def VERTICAL_BAR(self, i:int=None):
            if i is None:
                return self.getTokens(bnfParser.VERTICAL_BAR)
            else:
                return self.getToken(bnfParser.VERTICAL_BAR, i)

        def getRuleIndex(self):
            return bnfParser.RULE_rule_alternatives

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRule_alternatives" ):
                return visitor.visitRule_alternatives(self)
            else:
                return visitor.visitChildren(self)




    def rule_alternatives(self):

        localctx = bnfParser.Rule_alternativesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_rule_alternatives)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self.alternative()
            self.state = 38
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 34
                    self.match(bnfParser.VERTICAL_BAR)
                    self.state = 35
                    self.alternative() 
                self.state = 40
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AlternativeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(bnfParser.ItemContext)
            else:
                return self.getTypedRuleContext(bnfParser.ItemContext,i)


        def getRuleIndex(self):
            return bnfParser.RULE_alternative

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlternative" ):
                return visitor.visitAlternative(self)
            else:
                return visitor.visitChildren(self)




    def alternative(self):

        localctx = bnfParser.AlternativeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_alternative)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 41
                    self.item()

                else:
                    raise NoViableAltException(self)
                self.state = 44 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rule_reference(self):
            return self.getTypedRuleContext(bnfParser.Rule_referenceContext,0)


        def keyword_or_punctuation(self):
            return self.getTypedRuleContext(bnfParser.Keyword_or_punctuationContext,0)


        def optional_item(self):
            return self.getTypedRuleContext(bnfParser.Optional_itemContext,0)


        def repeated_item(self):
            return self.getTypedRuleContext(bnfParser.Repeated_itemContext,0)


        def getRuleIndex(self):
            return bnfParser.RULE_item

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitItem" ):
                return visitor.visitItem(self)
            else:
                return visitor.visitChildren(self)




    def item(self):

        localctx = bnfParser.ItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_item)
        try:
            self.state = 50
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [bnfParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.rule_reference()
                pass
            elif token in [bnfParser.STRING_TEXT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.keyword_or_punctuation()
                pass
            elif token in [bnfParser.LEFT_BRACKET]:
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.optional_item()
                pass
            elif token in [bnfParser.LEFT_BRACE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 49
                self.repeated_item()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Optional_itemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_BRACKET(self):
            return self.getToken(bnfParser.LEFT_BRACKET, 0)

        def rule_alternatives(self):
            return self.getTypedRuleContext(bnfParser.Rule_alternativesContext,0)


        def RIGHT_BRACKET(self):
            return self.getToken(bnfParser.RIGHT_BRACKET, 0)

        def getRuleIndex(self):
            return bnfParser.RULE_optional_item

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOptional_item" ):
                return visitor.visitOptional_item(self)
            else:
                return visitor.visitChildren(self)




    def optional_item(self):

        localctx = bnfParser.Optional_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_optional_item)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(bnfParser.LEFT_BRACKET)
            self.state = 53
            self.rule_alternatives()
            self.state = 54
            self.match(bnfParser.RIGHT_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Repeated_itemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_BRACE(self):
            return self.getToken(bnfParser.LEFT_BRACE, 0)

        def rule_alternatives(self):
            return self.getTypedRuleContext(bnfParser.Rule_alternativesContext,0)


        def RIGHT_BRACE(self):
            return self.getToken(bnfParser.RIGHT_BRACE, 0)

        def getRuleIndex(self):
            return bnfParser.RULE_repeated_item

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRepeated_item" ):
                return visitor.visitRepeated_item(self)
            else:
                return visitor.visitChildren(self)




    def repeated_item(self):

        localctx = bnfParser.Repeated_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_repeated_item)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(bnfParser.LEFT_BRACE)
            self.state = 57
            self.rule_alternatives()
            self.state = 58
            self.match(bnfParser.RIGHT_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Rule_identifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(bnfParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return bnfParser.RULE_rule_identifier

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRule_identifier" ):
                return visitor.visitRule_identifier(self)
            else:
                return visitor.visitChildren(self)




    def rule_identifier(self):

        localctx = bnfParser.Rule_identifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_rule_identifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(bnfParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Rule_referenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(bnfParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return bnfParser.RULE_rule_reference

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRule_reference" ):
                return visitor.visitRule_reference(self)
            else:
                return visitor.visitChildren(self)




    def rule_reference(self):

        localctx = bnfParser.Rule_referenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_rule_reference)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(bnfParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Keyword_or_punctuationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING_TEXT(self):
            return self.getToken(bnfParser.STRING_TEXT, 0)

        def getRuleIndex(self):
            return bnfParser.RULE_keyword_or_punctuation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKeyword_or_punctuation" ):
                return visitor.visitKeyword_or_punctuation(self)
            else:
                return visitor.visitChildren(self)




    def keyword_or_punctuation(self):

        localctx = bnfParser.Keyword_or_punctuationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_keyword_or_punctuation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(bnfParser.STRING_TEXT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





